# PrismReview

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/api/: jest.config.ts  package.json  smoke-test.js  smoke_01.json  smoke_02.json  verify.bat  verify.ps1
apps/web/: next.config.js  package.json
apps/worker/: README.md  pyproject.toml
apps/worker/src/: celery_app.py  llm_guard.py
apps/worker/src/jobs/: __init__.py  diagnose_review.py  embed_document.py  export_report.py  parse_document.py  run_agent_turn.py  summarize_report.py
apps/worker/tests/: test_llm_guard.py
docs/: ARCHITECTURE.md  sprint-0-kickoff.md
docs/coordination/: ACTIVE_SPRINT.md  AGENT_COORDINATION_PROTOCOL.md  Architecture_Review_and_Remediation_Plan_2026-07-22.md  Codebase_Audit_Report.md  MVP_RELEASE_SNAPSHOT.md  Review_2026-07-16_Report.md  Review_Plan_2026-07-16.md  Sprint_3.10_Qoderwork_Review.md  Sprint_3.10_Review_Timeline_Frontend.md  Sprint_3.12_Qoderwork_Review.md  Sprint_3.6_P1_Hardening_Backend.md  (+108 more)
scripts/: e2e-dev-pilot-lmstudio.js  e2e-dev-pilot-robustness.js  provider-adapter.js  run-agent-turns-for-review.js  setup-demo-review.js  setup-meeting-review.js  smoke-dev-pilot.js  smoke-export.js  smoke-provider-robustness.js  smoke-queue.js  smoke-runner.js  smoke-runtime.js  smoke-sse.js  spike-agent-turn.js  spike-local-llm.js  spike-provider-guard.js
(+171 files in other folders)
